deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcc-workbench
spec:
  selector:
    app: fcc-workbench
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
